# una-health-api

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
glucose_readings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
glucose_readings/management/commands/: import_glucose_readings.py
glucose_readings/migrations/: 0001_initial.py  0002_rename_value_glucosereading_glucose_level_and_more.py
glucose_readings/tests/: test_import_data.py  test_model.py
glucose_readings/tests/test_api/: test_api.py
una_health_api/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_id.py
